--- a/index.html
+++ b/index.html
@@ -348,13 +348,13 @@
         <img src="https://i.imgur.com/hpjrgcl.png" alt="NieuweDuinen Logo" style="max-width: 500px; margin: 1rem auto;">
         <h1>NieuweDuinen Roleplay</h1>
         <p>Beleef epische avonturen in de bruisende kuststad NieuweDuinen!</p>
-        <a href="https://discord.gg/nieuwe-duinen" target="_blank" class="button">Join onze Discord!</a>
+        <a href="https://discord.gg/nieuweduinenrp" target="_blank" class="button">Join onze Discord!</a>
     </header>
     <main>
         <section id="home">
             <h2>Welkom bij NieuweDuinen Roleplay</h2>
             <p>Duik in onze levendige FiveM-community en creëer jouw eigen verhaal in de fictieve kuststad NieuweDuinen. Of je nu een politieagent, ondernemer, of avonturier bent, onze server biedt een realistische en gezellige roleplay-ervaring. Sluit je aan via Discord en start vandaag!</p>
-            <a href="https://discord.gg/nieuwe-duinen" target="_blank" class="button">Begin je avontuur</a>
+            <a href="https://discord.gg/nieuweduinenrp" target="_blank" class="button">Begin je avontuur</a>
         </section>
     </main>
     <footer>
