--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             <ul id="nav-menu">
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="tutorial.html">Tutorial</a></li>
-                <li><a href="jobs.html">Jobs</a></li>
+                <li><a href="jobs.html">Banen</a></li>
                 <li><a href="aanmelden.html">Aanmelden</a></li>
                 <li><a href="community.html">Community</a></li>
             </ul>
