--- a/jobs.html
+++ b/jobs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ontdek beschikbare banen bij NieuweDuinen Roleplay, een levendige FiveM-community voor GTA V.">
-    <title>NieuweDuinen Roleplay - Jobs</title>
+    <title>NieuweDuinen Roleplay - Banen</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -365,7 +365,7 @@
             <ul id="nav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="tutorial.html">Tutorial</a></li>
-                <li><a href="jobs.html" class="active">Jobs</a></li>
+                <li><a href="jobs.html" class="active">Banen</a></li>
                 <li><a href="aanmelden.html">Aanmelden</a></li>
                 <li><a href="community.html">Community</a></li>
             </ul>
