--- a/jobs.html
+++ b/jobs.html
@@ -402,6 +402,10 @@
             <h3>Advocatuur</h3>
             <p>Vertegenwoordig cliënten in de rechtbank, bied juridisch advies en zorg voor gerechtigheid in NieuweDuinen. Een uitdagende rol voor slimme onderhandelaars.</p>
             <a href="https://forms.gle/advocatuur-placeholder" target="_blank" class="button">Solliciteer nu</a>
+
+            <h3>Staffteam NieuweDuinen</h3>
+            <p>Houd u de stad veilig? Helpt u ons de cubercriminelen tegen te houden!</p>
+            <a href="https://forms.gle/staffteam-placeholder" target="_blank" class="button">Solliciteer nu</a>
         </section>
     </main>
     <footer>
