--- a/jobs.html
+++ b/jobs.html
@@ -404,6 +404,7 @@
             <a href="https://forms.gle/advocatuur-placeholder" target="_blank" class="button">Solliciteer nu</a>
 
             <h3>Staffteam NieuweDuinen</h3>
+            <img src="https://i.imgur.com/hpjrgcl.png" alt="NieuweDuinen Logo" style="max-width: 150px; margin: 1rem auto;">
             <p>NieuweDuinen is een mooie plek waar mensen samenkomen, wonen of samenwerken. Juist daarom is het belangrijk dat we deze omgeving goed beschermen. Tegen mensen die kwaad willen doen, zoals hackers, kloters (relschoppers), of ruzies die voor onrust zorgen.</p>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLScEwZubWXqamhXwzcu7SOp5VqDEyyg3h0RSxcBZVxV6AFxuaA/viewform?usp=sharing&ouid=101369895049073795520" target="_blank" class="button">Solliciteer nu</a>
         </section>
