--- a/community.html
+++ b/community.html
@@ -23,7 +23,7 @@
             --bg: #0f172a;
             --text: #e5e7eb;
             --card-bg: #1e293b;
-            --neon-glow: 0 0 10px var(--accent), 0 20px 0 rgba(77, 178, 209, 0.7);
+            --neon-glow: 0 0 10px var(--accent), 0 0 20px rgba(77, 178, 209, 0.7);
         }
 
         * {
@@ -36,12 +36,12 @@
             font-family: 'Montserrat', sans-serif;
             background-color: var(--bg);
             color: var(--text);
-            line-height: 1line7;
+            line-height: 1.7;
             overflow-x: hidden;
         }
 
         header {
-            background: linear-gradient(to right, var(--primary), var(--secondary));
+            background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%);
             color: white;
             text-align: center;
             padding: 5rem 1rem;
@@ -56,7 +56,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('https://via.placeholder.com/1920x400?text=Nieuwe+Duinen+Hero') no-repeat center/cover;
+            background: url('https://via.placeholder.com/1920x400?text=NieuweDuinen+Hero') no-repeat center/cover;
             opacity: 0.25;
             z-index: 0;
             animation: parallax 20s linear infinite;
@@ -125,8 +125,6 @@
             transform: translateY(-2px);
         }
 
-        .2s;
-
         nav ul li a::after {
             content: '';
             position: absolute;
@@ -168,7 +166,7 @@
             margin-bottom: 3rem;
             box-shadow: 0 8px 30px rgba(0, 0, 0, 0.15);
             position: relative;
-            clip-path: polygon(0 0,0, 100% 0, 100% 90%, 0 100%);
+            clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
             animation: fadeInSection 0.8s ease-out;
         }
 
@@ -194,8 +192,202 @@
             animation: slideInHeader 0.8s ease-out;
         }
 
-        .relative;
-
         h2::before {
             content: '';
-            content-position: absolute
+            position: absolute;
+            left: -10px;
+            top: 50%;
+            width: 5px;
+            height: 50%;
+            background: var(--accent);
+            transform: translateY(-50%);
+            box-shadow: var(--neon-glow);
+        }
+
+        h2 svg {
+            width: 40px;
+            height: 40px;
+            fill: var(--accent);
+            transition: transform 0.3s ease;
+        }
+
+        section:hover h2 svg {
+            transform: rotate(10deg);
+        }
+
+        @keyframes slideInHeader {
+            from { opacity: 0; transform: translateX(-30px); }
+            to { opacity: 1; transform: translateX(0); }
+        }
+
+        .button {
+            display: inline-flex;
+            align-items: center;
+            padding: 0.8rem 2rem;
+            background: var(--accent);
+            color: white;
+            text-decoration: none;
+            font-family: 'Orbitron', sans-serif;
+            font-weight: 600;
+            border: none;
+            border-radius: 8px;
+            transition: all 0.3s ease;
+            position: relative;
+            overflow: hidden;
+            z-index: 1;
+            box-shadow: var(--neon-glow);
+            animation: pulseButton 2s ease-in-out infinite;
+        }
+
+        .button::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #6cc1e0; /* Lichtere tint van #4db2d1 */
+            transform: scaleX(0);
+            transform-origin: left;
+            transition: transform 0.3s ease;
+            z-index: -1;
+        }
+
+        .button:hover::before {
+            transform: scaleX(1);
+        }
+
+        .button:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 0 12px var(--accent), 0 0 24px rgba(77, 178, 209, 0.8);
+        }
+
+        @keyframes pulseButton {
+            0%, 100% { transform: scale(1); }
+            50% { transform: scale(1.05); }
+        }
+
+        footer {
+            background: var(--primary);
+            color: white;
+            text-align: center;
+            padding: 2rem;
+            clip-path: polygon(0 20%, 100% 0, 100% 100%, 0 100%);
+        }
+
+        .theme-toggle {
+            position: fixed;
+            top: 1rem;
+            right: 1rem;
+            background: var(--accent);
+            color: white;
+            border: none;
+            padding: 0.5rem 1rem;
+            border-radius: 8px;
+            font-family: 'Orbitron', sans-serif;
+            cursor: pointer;
+            z-index: 1000;
+            transition: all 0.3s ease;
+            box-shadow: var(--neon-glow);
+        }
+
+        .theme-toggle:hover {
+            background: #6cc1e0;
+            box-shadow: 0 0 12px var(--accent), 0 0 24px rgba(77, 178, 209, 0.8);
+        }
+
+        @media (max-width: 768px) {
+            header {
+                padding: 3rem 1rem;
+            }
+
+            nav ul {
+                display: none;
+                flex-direction: column;
+                background: var(--primary);
+                position: absolute;
+                top: 100%;
+                left: 0;
+                width: 100%;
+                padding: 1rem;
+                animation: slideInNav 0.3s ease;
+            }
+
+            @keyframes slideInNav {
+                from { transform: translateX(-100%); }
+                to { transform: translateX(0); }
+            }
+
+            nav ul.show {
+                display: flex;
+            }
+
+            .hamburger {
+                display: block;
+            }
+
+            h2 {
+                font-size: clamp(1.8rem, 4vw, 2.5rem);
+            }
+        }
+    </style>
+</head>
+<body>
+    <button class="theme-toggle" onclick="toggleTheme()">Dark Mode</button>
+    <header>
+        <nav>
+            <button class="hamburger">☰</button>
+            <ul id="nav-menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="tutorial.html">Tutorial</a></li>
+                <li><a href="jobs.html">Banen</a></li>
+                <li><a href="aanmelden.html">Aanmelden</a></li>
+                <li><a href="community.html" class="active">Community</a></li>
+            </ul>
+        </nav>
+        <img src="https://i.imgur.com/hpjrgcl.png" alt="NieuweDuinen Logo" style="max-width: 500px; margin: 1rem auto;">
+        <h1>NieuweDuinen Roleplay</h1>
+        <p>Beleef epische avonturen in de bruisende kuststad NieuweDuinen!</p>
+        <a href="https://discord.gg/nieuwe-duinen" target="_blank" class="button">Join onze Discord!</a>
+    </header>
+    <main>
+        <section id="community">
+            <h2>
+                <svg viewBox="0 0 24 24">
+                    <path d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5s-3 1.34-3 3 1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05.02.01.04.03.05.04 1.14.83 1.92 1.91 1.92 3.41V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"/>
+                </svg>
+                Onze Community
+            </h2>
+            <p>Word deel van onze bruisende NieuweDuinen-community! Hier zijn enkele voordelen van het lidmaatschap:</p>
+            <ul>
+                <li><strong>Gezellige sfeer</strong>: Maak vrienden en werk samen met andere roleplayers.</li>
+                <li><strong>Actieve Discord</strong>: 24/7 ondersteuning, evenementen, en updates.</li>
+                <li><strong>Unieke evenementen</strong>: Neem deel aan races, overvallen, en community-verhalen.</li>
+                <li><strong>Ruimte voor creativiteit</strong>: Creëer je eigen verhaallijnen en bedrijven.</li>
+            </ul>
+            <p>Sluit je aan bij onze Discord om direct mee te doen en de community te leren kennen!</p>
+            <a href="https://discord.gg/nieuwe-duinen" target="_blank" class="button">Word lid van de community</a>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 NieuweDuinen Roleplay - Alle rechten voorbehouden</p>
+    </footer>
+
+    <script>
+        // Hamburger menu
+        const hamburger = document.querySelector('.hamburger');
+        const navMenu = document.querySelector('#nav-menu');
+        hamburger.addEventListener('click', () => {
+            navMenu.classList.toggle('show');
+        });
+
+        // Dark mode toggle
+        function toggleTheme() {
+            const body = document.body;
+            const currentTheme = body.getAttribute('data-theme') === 'dark' ? 'light' : 'dark';
+            body.setAttribute('data-theme', currentTheme);
+            document.querySelector('.theme-toggle').textContent = currentTheme === 'dark' ? 'Light Mode' : 'Dark Mode';
+        }
+    </script>
+</body>
+</html>
