--- a/community.html
+++ b/community.html
@@ -366,7 +366,7 @@
                 <li><strong>Ruimte voor creativiteit</strong>: Creëer je eigen verhaallijnen en bedrijven.</li>
             </ul>
             <p>Sluit je aan bij onze Discord om direct mee te doen en de community te leren kennen!</p>
-            <a href="https://discord.gg/nieuwe-duinen" target="_blank" class="button">Word lid van de community</a>
+            <a href="https://discord.gg/nieuweduinenrp" target="_blank" class="button">Word lid van de community</a>
         </section>
     </main>
     <footer>
