--- a/doneren.html
+++ b/doneren.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sluit je aan bij de gezellige community van NieuweDuinen Roleplay, een levendige FiveM-community voor GTA V.">
-    <title>NieuweDuinen Roleplay - Community</title>
+    <meta name="description" content="Steun NieuweDuinen Roleplay met een donatie en help onze server draaiende te houden!">
+    <title>NieuweDuinen Roleplay - Doneren</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -20,8 +20,8 @@
                 <li><a href="jobs.html">Banen</a></li>
                 <li><a href="tutorial.html">Tutorial</a></li>
                 <li><a href="aanmelden.html">Aanmelden</a></li>
-                <li><a href="doneren.html">Doneren</a></li>
-                <li><a href="community.html" class="active">Community</a></li>
+                <li><a href="doneren.html" class="active">Doneren</a></li>
+                <li><a href="community.html">Community</a></li>
                 <li><a href="over-ons.html">Over ons</a></li>
             </ul>
         </nav>
@@ -31,22 +31,15 @@
         <a href="https://discord.gg/nieuwe-duinen" target="_blank" class="button">Join onze Discord!</a>
     </header>
     <main>
-        <section id="community">
+        <section id="doneren">
             <h2>
                 <svg viewBox="0 0 24 24">
-                    <path d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5s-3 1.34-3 3 1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05.02.01.04.03.05.04 1.14.83 1.92 1.91 1.92 3.41V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"/>
+                    <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm-1-13h2v6h-2zm0 8h2v2h-2z"/>
                 </svg>
-                Onze Community
+                Doneren
             </h2>
-            <p>Word deel van onze bruisende NieuweDuinen-community! Hier zijn enkele voordelen van het lidmaatschap:</p>
-            <ul>
-                <li><strong>Gezellige sfeer</strong>: Maak vrienden en werk samen met andere roleplayers.</li>
-                <li><strong>Actieve Discord</strong>: 24/7 ondersteuning, evenementen, en updates.</li>
-                <li><strong>Unieke evenementen</strong>: Neem deel aan races, overvallen, en community-verhalen.</li>
-                <li><strong>Ruimte voor creativiteit</strong>: Creëer je eigen verhaallijnen en bedrijven.</li>
-            </ul>
-            <p>Sluit je aan bij onze Discord om direct mee te doen en de community te leren kennen!</p>
-            <a href="https://discord.gg/nieuwe-duinen" target="_blank" class="button">Word lid van de community</a>
+            <p>Help NieuweDuinen Roleplay draaiende te houden met een donatie! Jouw steun helpt ons om de server te verbeteren, nieuwe functies toe te voegen en een geweldige ervaring te bieden. Klik hieronder om te doneren.</p>
+            <a href="https://example.com/doneren-placeholder" target="_blank" class="button">Doneer nu</a>
         </section>
     </main>
     <footer>
