--- a/apv.html
+++ b/apv.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sluit je aan bij de gezellige community van NieuweDuinen Roleplay, een levendige FiveM-community voor GTA V.">
-    <title>NieuweDuinen Roleplay - Community</title>
+    <meta name="description" content="Bekijk de Algemene Plaatselijke Verordening (APV) van NieuweDuinen Roleplay, een levendige FiveM-community voor GTA V.">
+    <title>NieuweDuinen Roleplay - APV</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -15,13 +15,13 @@
             <button class="hamburger">☰</button>
             <ul id="nav-menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="apv.html">APV</a></li>
+                <li><a href="apv.html" class="active">APV</a></li>
                 <li><a href="wetboek.html">Wetboek</a></li>
                 <li><a href="jobs.html">Banen</a></li>
                 <li><a href="tutorial.html">Tutorial</a></li>
                 <li><a href="aanmelden.html">Aanmelden</a></li>
                 <li><a href="doneren.html">Doneren</a></li>
-                <li><a href="community.html" class="active">Community</a></li>
+                <li><a href="community.html">Community</a></li>
                 <li><a href="over-ons.html">Over ons</a></li>
             </ul>
         </nav>
@@ -31,22 +31,15 @@
         <a href="https://discord.gg/nieuwe-duinen" target="_blank" class="button">Join onze Discord!</a>
     </header>
     <main>
-        <section id="community">
+        <section id="apv">
             <h2>
                 <svg viewBox="0 0 24 24">
-                    <path d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5s-3 1.34-3 3 1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05.02.01.04.03.05.04 1.14.83 1.92 1.91 1.92 3.41V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"/>
+                    <path d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V8l-6-6zm-1 2l5 5h-5V4zm-1 16H8v-2h4v2zm0-4H8v-2h4v2zm0-4H8V8h4v2z"/>
                 </svg>
-                Onze Community
+                Algemene Plaatselijke Verordening (APV)
             </h2>
-            <p>Word deel van onze bruisende NieuweDuinen-community! Hier zijn enkele voordelen van het lidmaatschap:</p>
-            <ul>
-                <li><strong>Gezellige sfeer</strong>: Maak vrienden en werk samen met andere roleplayers.</li>
-                <li><strong>Actieve Discord</strong>: 24/7 ondersteuning, evenementen, en updates.</li>
-                <li><strong>Unieke evenementen</strong>: Neem deel aan races, overvallen, en community-verhalen.</li>
-                <li><strong>Ruimte voor creativiteit</strong>: Creëer je eigen verhaallijnen en bedrijven.</li>
-            </ul>
-            <p>Sluit je aan bij onze Discord om direct mee te doen en de community te leren kennen!</p>
-            <a href="https://discord.gg/nieuwe-duinen" target="_blank" class="button">Word lid van de community</a>
+            <p>Hier vind je de Algemene Plaatselijke Verordening (APV) van NieuweDuinen. Deze regels zorgen voor een veilige en plezierige roleplay-ervaring voor iedereen. Sluit je aan bij onze Discord voor de volledige APV en verdere details!</p>
+            <a href="https://discord.gg/nieuwe-duinen" target="_blank" class="button">Bekijk de APV op Discord</a>
         </section>
     </main>
     <footer>
