--- a/community.html
+++ b/community.html
@@ -22,7 +22,7 @@
                 <li><a href="aanmelden.html">Aanmelden</a></li>
                 <li><a href="doneren.html">Doneren</a></li>
                 <li><a href="community.html" class="active">Community</a></li>
-                <li><a href="over-ons.html">Over ons</a></li>
+                <li>< @<a href="over-ons.html">Over ons</a></li>
             </ul>
         </nav>
         <img src="https://i.imgur.com/hpjrgcl.png" alt="NieuweDuinen Logo" style="max-width: 500px; margin: 1rem auto;">
@@ -67,7 +67,15 @@
             const currentTheme = body.getAttribute('data-theme') === 'dark' ? 'light' : 'dark';
             body.setAttribute('data-theme', currentTheme);
             document.querySelector('.theme-toggle').textContent = currentTheme === 'dark' ? 'Light Mode' : 'Dark Mode';
+            localStorage.setItem('theme', currentTheme); // Save theme to localStorage
         }
+
+        // Apply saved theme on page load
+        document.addEventListener('DOMContentLoaded', () => {
+            const savedTheme = localStorage.getItem('theme') || 'light'; // Default to light if no theme is saved
+            document.body.setAttribute('data-theme', savedTheme);
+            document.querySelector('.theme-toggle').textContent = savedTheme === 'dark' ? 'Light Mode' : 'Dark Mode';
+        });
     </script>
 </body>
 </html>
