--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button class="theme-toggle" onclick="toggleTheme()">Dark Mode</button>
+    <button class="theme-toggle" onclick="toggleTheme()" aria-label="Wissel tussen dark en light mode">Dark Mode</button>
     <header>
         <nav>
-            <button class="hamburger">☰</button>
+            <button class="hamburger" aria-label="Open navigatiemenu">☰</button>
             <ul id="nav-menu">
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="apv.html">APV</a></li>
@@ -25,7 +25,7 @@
                 <li><a href="over-ons.html">Over ons</a></li>
             </ul>
         </nav>
-        <img src="https://i.imgur.com/hpjrgcl.png" alt="NieuweDuinen Logo" style="max-width: 500px; margin: 1rem auto;">
+        <img src="https://i.imgur.com/hpjrgcl.png" alt="NieuweDuinen Logo">
         <h1>NieuweDuinen Roleplay</h1>
         <p>Beleef epische avonturen in de bruisende kuststad NieuweDuinen!</p>
         <a href="https://discord.gg/nieuwe-duinen" target="_blank" class="button">Join onze Discord!</a>
@@ -50,8 +50,19 @@
         // Hamburger menu
         const hamburger = document.querySelector('.hamburger');
         const navMenu = document.querySelector('#nav-menu');
+        const navLinks = navMenu.querySelectorAll('a');
+
         hamburger.addEventListener('click', () => {
             navMenu.classList.toggle('show');
+            hamburger.setAttribute('aria-expanded', navMenu.classList.contains('show'));
+        });
+
+        // Sluit menu na klik op een link
+        navLinks.forEach(link => {
+            link.addEventListener('click', () => {
+                navMenu.classList.remove('show');
+                hamburger.setAttribute('aria-expanded', 'false');
+            });
         });
 
         // Dark mode toggle
