--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
             const isExpanded = navMenu.classList.toggle('show');
             hamburger.setAttribute('aria-expanded', isExpanded);
             navMenu.setAttribute('aria-hidden', !isExpanded);
+            // Voorkom scrollen van body als menu open is
+            document.body.style.overflow = isExpanded ? 'hidden' : '';
         });
 
         // Sluit menu na klik op een link
@@ -66,6 +68,7 @@
                 navMenu.classList.remove('show');
                 hamburger.setAttribute('aria-expanded', 'false');
                 navMenu.setAttribute('aria-hidden', 'true');
+                document.body.style.overflow = '';
             });
         });
 
