--- a/aanmelden.html
+++ b/aanmelden.html
@@ -2,18 +2,20 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Vraag een wapenvergunning aan voor NieuweDuinen Roleplay, een levendige FiveM-community voor GTA V.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="description" content="Meld je aan voor NieuweDuinen Roleplay en word lid van onze FiveM-community.">
     <title>NieuweDuinen Roleplay - Aanmelden</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button class="theme-toggle" onclick="toggleTheme()">Dark Mode</button>
+    <button class="theme-toggle" onclick="toggleTheme()" aria-label="Wissel tussen dark en light mode">Dark Mode</button>
     <header>
         <nav>
-            <button class="hamburger">☰</button>
-            <ul id="nav-menu">
+            <button class="hamburger" aria-label="Open navigatiemenu" aria-expanded="false">☰</button>
+            <ul id="nav-menu" aria-hidden="true">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="apv.html">APV</a></li>
                 <li><a href="wetboek.html">Wetboek</a></li>
@@ -25,28 +27,32 @@
                 <li><a href="over-ons.html">Over ons</a></li>
             </ul>
         </nav>
-        <img src="https://i.imgur.com/hpjrgcl.png" alt="NieuweDuinen Logo" style="max-width: 500px; margin: 1rem auto;">
+        <img src="https://i.imgur.com/hpjrgcl.png" alt="NieuweDuinen Logo">
         <h1>NieuweDuinen Roleplay</h1>
-        <p>Beleef epische avonturen in de bruisende kuststad NieuweDuinen!</p>
-        <a href="https://discord.gg/nieuwe-duinen" target="_blank" class="button">Join onze Discord!</a>
+        <p>Word lid van onze community en start je roleplay-avontuur!</p>
+        <a href="https://discord.gg/nieuweduinenrp" target="_blank" class="button">Join onze Discord!</a>
     </header>
     <main>
         <section id="aanmelden">
             <h2>
                 <svg viewBox="0 0 24 24">
-                    <path d="M15 12c0-1.1.9-2 2-2s2 .9 2 2-1.9 2-2 2-2-.9-2-2zm-2-9H3v18h18V9h-8V3zm-2 12H5v-2h6v2zm0-4H5V9h6v2zm0-4H5V5h6v2z"/>
+                    <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
                 </svg>
-                Wapenvergunning Aanvragen
+                Aanmelden
             </h2>
-            <div>
-                <label for="naam">Volledige naam:</label>
-                <input type="text" id="naam" name="naam" required>
-                <label for="personage">Personage naam:</label>
-                <input type="text" id="personage" name="personage" required>
-                <label for="reden">Reden voor aanvraag:</label>
-                <textarea id="reden" name="reden" required></textarea>
-                <button class="button" onclick="submitForm()">Verstuur</button>
-            </div>
+            <p>Vul het onderstaande formulier in om je aan te melden voor NieuweDuinen Roleplay. Na het indienen ontvang je verdere instructies via onze Discord-server.</p>
+            <form id="signup-form" onsubmit="submitForm(event)">
+                <label for="name">Naam:</label>
+                <input type="text" id="name" name="name" required>
+                <label for="email">E-mail:</label>
+                <input type="email" id="email" name="email" required>
+                <label for="discord">Discord ID:</label>
+                <input type="text" id="discord" name="discord" required>
+                <label for="motivatie">Waarom wil je lid worden?</label>
+                <textarea id="motivatie" name="motivatie" required></textarea>
+                <button type="submit" class="button">Verzenden</button>
+            </form>
+            <p>Heb je al een account? Sluit je aan via <a href="https://discord.gg/nieuweduinenrp" target="_blank">onze Discord</a>!</p>
         </section>
     </main>
     <footer>
@@ -57,8 +63,22 @@
         // Hamburger menu
         const hamburger = document.querySelector('.hamburger');
         const navMenu = document.querySelector('#nav-menu');
+        const navLinks = navMenu.querySelectorAll('a');
+
         hamburger.addEventListener('click', () => {
-            navMenu.classList.toggle('show');
+            const isExpanded = navMenu.classList.toggle('show');
+            hamburger.setAttribute('aria-expanded', isExpanded);
+            navMenu.setAttribute('aria-hidden', !isExpanded);
+            document.body.style.overflow = isExpanded ? 'hidden' : '';
+        });
+
+        navLinks.forEach(link => {
+            link.addEventListener('click', () => {
+                navMenu.classList.remove('show');
+                hamburger.setAttribute('aria-expanded', 'false');
+                navMenu.setAttribute('aria-hidden', 'true');
+                document.body.style.overflow = '';
+            });
         });
 
         // Dark mode toggle
@@ -67,28 +87,21 @@
             const currentTheme = body.getAttribute('data-theme') === 'dark' ? 'light' : 'dark';
             body.setAttribute('data-theme', currentTheme);
             document.querySelector('.theme-toggle').textContent = currentTheme === 'dark' ? 'Light Mode' : 'Dark Mode';
-            localStorage.setItem('theme', currentTheme); // Save theme to localStorage
+            localStorage.setItem('theme', currentTheme);
         }
 
         // Apply saved theme on page load
         document.addEventListener('DOMContentLoaded', () => {
-            const savedTheme = localStorage.getItem('theme') || 'light'; // Default to light if no theme is saved
+            const savedTheme = localStorage.getItem('theme') || 'light';
             document.body.setAttribute('data-theme', savedTheme);
             document.querySelector('.theme-toggle').textContent = savedTheme === 'dark' ? 'Light Mode' : 'Dark Mode';
+            navMenu.setAttribute('aria-hidden', !navMenu.classList.contains('show'));
         });
 
-        // Form submission (placeholder)
-        function submitForm() {
-            const naam = document.getElementById('naam').value;
-            const personage = document.getElementById('personage').value;
-            const reden = document.getElementById('reden').value;
-
-            if (naam && personage && reden) {
-                alert('Aanvraag verzonden! Sluit je aan bij onze Discord voor verdere afhandeling.');
-                // Hier kun je een echte form submission toevoegen, bijv. naar een Google Form
-            } else {
-                alert('Vul alle velden in!');
-            }
+        // Form submission placeholder
+        function submitForm(event) {
+            event.preventDefault();
+            alert('Formulier verzonden! Je ontvangt verdere instructies via Discord.');
         }
     </script>
 </body>
